Add REST endpoints for category
